# learnLang

./: .gitignore
goClass/simpleExample/: hello_test.go
goWithTests/helloWorld/: hello.go  hello_test.go
goWithTests/repeat/: repeat.go  repeat_test.go
learngo/goClass/arraySliceMap/: main.go
learngo/goClass/helloWorld/: helloWorld.go
learngo/goClass/simpleExample/: hello.go
learngo/goClass/simpleExample/cmd/: main.go
learngo/goWithTests/helloWorld/: hello_test.go
learngo/goWithTests/integers/: adder_test.go
learngo/goWithTests/repeat/: repeat_test.go
learngo/goWithTests/slices/: sum.go  sum_test.go
learngo/misc/: goBufferedChannel.go  goChannel.go  goRoutine.go  goSelect.go  goWG.go  goWaitGroups.go  goWorkerPool.go
learnrust/: README.org
learnrust/branches/src/: main.rs
learnrust/collections/src/: main.rs
learnrust/enums/src/: main.rs
learnrust/exercises/src/: main.rs
learnrust/guessing_game/: Cargo.toml
learnrust/guessing_game/src/: main.rs
learnrust/ownership/src/: main.rs
learnrust/restaurant/src/: lib.rs
learnrust/structs/src/: main.rs
learnrust/variables/src/: main.rs
